--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Press+Start+2P&display=swap');
+@import url(elements.css);
 
+.heading{
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 100px;
+    transition: opacity 0.5s ease-out;
+}
 
-*{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:rgb(19, 58, 46);
+.text{
+    font-family: "Handjet", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings:
+        "ELGR" 1,
+        "ELSH" 2;
+    font-size: 60px;
+    transition: opacity 0.5s ease-out;
 }
 
 body{
@@ -18,8 +34,4 @@ body{
 
 #elements{
     background-color: #152620;
-}
-
-#testing{
-    background-color: rgb(255, 0, 0);
 }
